fix: make navigation for mobile devices more visible

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -499,7 +499,7 @@ body {
 nav {
     display: flex;
     /*border: solid red;*/
-    justify-content: space-between;
+    justify-content: space-around;
       
   
 }  
@@ -523,12 +523,13 @@ nav {
     margin-bottom: 0;
     padding-left: 0;
     align-self: flex-start;
+    
 
     & li {
         list-style: none;
         /*border: solid black;*/
-        margin-right: 2em;
-        
+
+            
     }
 }
 
@@ -585,7 +586,8 @@ nav {
 .mobile-display-nav {
     /*border: solid blue;*/
     display: flex;
-    margin-left: 0;
+    margin-right: 2em;
+    
   
    }
 
@@ -616,6 +618,7 @@ nav {
     display: flex;
     flex-direction: column;
     margin-bottom: 0;
+    align-items: center;
 }
 
 .login-user-profile-pic {
@@ -623,8 +626,8 @@ nav {
     border-radius: 50%;
     padding: .2em;
    
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
 
     & img {
         height: 100%;
@@ -2943,6 +2946,29 @@ nav {
 
 .mobile-display-nav {
     display: none;
+}
+
+.nav-list { 
+    /*border: solid black; */
+     
+    & li {
+        margin-right: 3em;
+            
+    }
+}
+
+.login-user-profile-pic {
+    height: 60px;
+    width: 60px;
+
+    & img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+    
 }
 
 /* Chats */
